- ESP-54 Updated default permissions blacklist - Updated Portuguese translation - Added case for hand in get/set equipment

--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -15,3 +15,5 @@ interal:
   config-version: 1
 permission-blacklist:
   - "minecraft.command.op"
+  - "minecraft.command.deop"
+  - "minecraft.command.stop"
