--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ plugins {
 
 allprojects {
     group = 'com.enjin.enjincraft'
-    version = '1.0.2'
+    version = '1.1.0-SNAPSHOT'
 
     repositories {
         mavenLocal()
