Config.yml: Add example link-permissions

--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -17,3 +17,6 @@ permission-blacklist:
   - "minecraft.command.op"
   - "minecraft.command.deop"
   - "minecraft.command.stop"
+# link-permissions:
+#   - "example.perm1"
+#   - "example.perm2"
