- Relocated dependency NBT-API

--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -35,6 +35,8 @@ shadowJar {
     dependencies {
         exclude(dependency("com.google.code.gson:gson"))
     }
+
+    relocate 'de.tr7zw.changeme.nbtapi', 'de.tr7zw.enjincraft.nbtapi'
 }
 
 processResources {
