Define dependencies acquired at runtime to gradle dependencies and remove dependency management system. Relocated all dependencies to prevent conflicts.

--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -43,6 +43,7 @@ shadowJar {
     relocate("org.intellij", "${LIBS}.intellij")
     relocate("org.java_websocket", "${LIBS}.java_websocket")
     relocate("org.jetbrains", "${LIBS}.jetbrains")
+    relocate("org.slf4j", "${LIBS}.slf4j")
     relocate("retrofit2", "${LIBS}.retrofit2")
 }
 
