Exclude slf4j from transitive dependencies as spigot/paper shade this in the server jar.

--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,9 @@ subprojects {
     targetCompatibility = JavaVersion.VERSION_1_8
 
     dependencies {
-        implementation deps.sentry;
+        implementation (deps.sentry) {
+            exclude module: "slf4j-api"
+        }
     }
 
     javadoc {
