--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ plugins {
 
 allprojects {
     group = 'com.enjin.enjincraft'
-    version = '1.1.0-SNAPSHOT'
+    version = '1.1.0'
 
     repositories {
         mavenLocal()
