--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
     ext.versions = [
             'minecraftCommons': '1.0.0',
-            'enjinSdk'        : '1.0.4',
+            'enjinSdk'        : '1.0.7',
             'kyoriText'       : '4.1.1',
-            'kyoriTextAdapter': '4.0.0-SNAPSHOT',
+            'kyoriTextAdapter': '4.0.1',
             'spigot'          : '1.13.2-R0.1-SNAPSHOT',
             'placeholderApi'  : '2.10.9',
             'sqlite'          : '3.28.0',
             'sentry'          : '1.7.27',
-            'nbtapi'          : '2.8.0'
+            'nbtapi'          : '2.9.0-SNAPSHOT'
     ]
 
     ext.deps = [
@@ -43,7 +43,7 @@ plugins {
 
 allprojects {
     group = 'com.enjin.enjincraft'
-    version = '1.1.1'
+    version = '1.1.2-SNAPSHOT'
 
     repositories {
         mavenLocal()
